# Headtracker

./: CMakeLists.txt  Makefile  sdkconfig  sdkconfig.old
components/bno055/: CMakeLists.txt  bno055.cpp
components/bno055/include/: bno055.hpp  limited_int.hpp
components/esp32-button/: CMakeLists.txt  button.c
components/tracker/: CMakeLists.txt  tracker.cpp
components/tracker/include/: tracker.hpp
main/: CMakeLists.txt  esp_hidd_prf_api.c  esp_hidd_prf_api.h  hid_dev.h  hid_device_le_prf.c  hidd_le_prf_int.h  joystick_buttons.h  joystick_main.c  joystick_main.cpp
